@@ -1,3 +1,7 @@
+2013-05-15  Alfonso Ariza - takeover from INETMANET
+
+	fix: Solved a special case where the intersection is just a corner of a polygon
+
 2013-01-30  ------ inet-2.1.0 released ------
 
 2012-08-07  ------ inet-2.0.0 released ------
